tests/compiler_errors/name_redefinitions/mem_redef_mem.tlp
reserve foo 1 end
reserve foo 2 end
